[package]
name = "mljtui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ratatui = "0.24.0"
mljcl = { version = "1.0.0", git = "https://github.com/duckfromdiscord/mljcl" }
clap = "4.4.7"
crossterm = "0.27.0"
rascii_art = "0.4.5"
image = "0.24.7"
tokio = { version = "1.33.0", features = ["macros"] }
bytes = "1.5.0"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
ratatui-image = "0.3.3"
ansi-to-tui = "3.1.0"
reqwest = "0.11.22"
